[package]
name = "hyperdeck"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SomewhereOutInSpace/hyperdeck/"

[dependencies]
# HAL
embedded-hal = "0.2.7"
rp2040-hal = "0.8.2"
rp-pico = "0.7.0"
critical-section = "1.1.1"

# Processor access
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

# USB HID
usb-device = "0.2.9"
usbd-hid = "0.6.1"

# Display
mipidsi = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }

# Utility
fugit = "0.3.6"
heapless = "0.7.16"
embedded-graphics-framebuf = "0.5.0"

